# poetry-plugin-lockedbuild

./: LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: main.yml  release.yml
src/poetry_plugin_lockedbuild/: __init__.py  builder.py  command.py  plugins.py
tests/: conftest.py  helpers.py  test_builder.py  test_command.py
tests/fixtures/simple_project/: pyproject.toml
tests/fixtures/simple_project/my_package/: __init__.py
tests/fixtures/simple_project_with_extras/: pyproject.toml
tests/fixtures/simple_project_with_group/: pyproject.toml
